# ProgressMod

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/: definitions.h  engine.h  modManager.h
src/: CMakeLists.txt  engine.cpp  main.cpp  modManager.cpp
